safari fixes. band-aid for datalist on safari. (#381)
* general safari fixes. band-aid fix on datalists to make them at least display something.

* fixed typo in manage classes.

--- a/client/src/Content/manage.css
+++ b/client/src/Content/manage.css
@@ -97,6 +97,16 @@
     border-top: 1px solid #ddd;
 }
 
+#cteacher select.polyfilling {
+    z-index: 80;
+}
+
+#cteacher2 select.polyfilling {
+    top: 34px;
+    left: 0px;
+    z-index: 80;
+}
+
 @media (max-width: 768px) {
     .manage-btn-group-spacer {
         margin-top: 25px;
